Corrección Cobertura Boscosa

--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/Render/_renderCoberturaBoscosa.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/Render/_renderCoberturaBoscosa.cshtml
@@ -36,9 +36,12 @@
             _CoberturaBoscosa.fnSaveForm = function (data) {
                 if (data != null) {
                     var dt = _renderCoberturaBoscosa.dtCoberturaBoscosa;
-
-                    if (obj == null || obj == "") {//Nuevo Registro                        
-                        if (!utilDt.existValorSearch(_renderCoberturaBoscosa.dtCoberturaBoscosa, "ACTIVIDAD", data["ACTIVIDAD"])) {                            
+                    debugger;
+                    if (obj == null || obj == "") {//Nuevo Registro     
+                        debugger;
+                        if (!utilDt.existValorSearch(_renderCoberturaBoscosa.dtCoberturaBoscosa, "ACTIVIDAD", data["ACTIVIDAD"])) {
+                            console.log(data);
+                            debugger;
                             dt.rows.add([data]).draw();
                             dt.page('last').draw('page');
                             utilSigo.toastSuccess("Exito", "Datos guardados correctamente");
