--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/_CoberturaBoscosa.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/_CoberturaBoscosa.cshtml
@@ -9,8 +9,8 @@
         </div>
         <div class="modal-body">
             <form id="frmItemCoberturaBoscosa">
-                @Html.Hidden("hdfRegEstadoOtrosPtosEvaluacion")              
-                @Html.Hidden("hdfCodSecuencialOtrosPtosEvaluacion")              
+                @Html.Hidden("hdfRegEstadoCobBoscosa")              
+                @Html.Hidden("hdfCodSecuencialCobBos")              
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="ddlVerticeId" class="text-small">Actividad</label>
