--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/_OtrosPuntosEval.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/_OtrosPuntosEval.cshtml
@@ -4,7 +4,7 @@
 <div class="modal-dialog" role="document">
     <div class="modal-content">
         <div class="modal-header text-small" style="cursor:move;">
-            <span>Otros Puntos de Evaluacion</span>
+            <span>Otros Puntos de Evaluación</span>
             <i class="fa fa-close" style="cursor:pointer;" data-dismiss="modal" aria-label="Close"></i>
         </div>
         <div class="modal-body">
@@ -13,7 +13,7 @@
                 @Html.Hidden("hdfCodSecuencialOPE")              
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="ddlVerticeId" class="text-small">Evaluacion</label>
+                        <label for="ddlVerticeId" class="text-small">Evaluación</label>
                         @Html.TextBox("txtEvaluacion", "", new { @class = "form-control form-control-sm", maxlength = "300", onkeypress = "return utilSigo.checkLetter(event);" })
                     </div>
                     <div class="form-group col-md-6">
