--- a/SIGOFCv3/Areas/General/Views/Controles/_Persona.cshtml
+++ b/SIGOFCv3/Areas/General/Views/Controles/_Persona.cshtml
@@ -205,8 +205,8 @@
                                     @Html.EditorFor(m => m.txtINumRegProf, new { htmlAttributes = new { @class = "form-control form-control-sm" } })
                                 </div>
                                 <div id="dvICargo" class="form-group col-md-4">
-                                    <label for="lblICargo" class="text-small">Cargo</label>
-                                    @Html.EditorFor(m => m.txtICargo, new { htmlAttributes = new { @class = "form-control form-control-sm" } })
+                                    <label for="lblICargo" class="text-small" hidden="hidden">Cargo</label>
+                                    @Html.EditorFor(m => m.txtICargo, new { htmlAttributes = new { @class = "form-control form-control-sm", hidden = "hidden" } })
                                 </div>
                             </div>
                             <div class="form-row">
