--- a/SIGOFCv3/Areas/Supervision/Views/ManInforme/_CoberturaBoscosa.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInforme/_CoberturaBoscosa.cshtml
@@ -18,7 +18,7 @@
                     </div>
                     <div class="form-group col-md-6">
                         <label for="txtActividad" class="text-small">Área</label>
-                        @Html.TextBox("txtArea", "", new { @class = "form-control form-control-sm", maxlength = "10", onblur = "return utilSigo.onBlurTwoDecimal(this,'Área');", onkeypress = "return utilSigo.onKeyDecimal(event, this);" })
+                        @Html.TextBox("txtArea", "", new { @class = "form-control form-control-sm", maxlength = "10", onblur = "return utilSigo.onBlurTwoDecimalIS(this,'Área');", onkeypress = "return utilSigo.onKeyDecimal(event, this);" })
                     </div>
                 </div>
                 <div class="form-row">
